<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.diplinkblaze.spacednote.type.TypeElementsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/activity_type_elements_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_type_elements" />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fab_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:fab_labelStyle="@style/fab_menu_labels_style"
        app:fab_labelsPosition="left">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_size="mini"
            android:src="@drawable/ic_divider_small_white"
            app:fab_title="@string/divider"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_pictures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_size="mini"
            android:src="@drawable/ic_photo_small_white"
            app:fab_title="@string/pictures"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_size="mini"
            android:src="@drawable/ic_list_small_white"
            app:fab_title="@string/list"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_size="mini"
            android:src="@drawable/ic_short_text_small_white"
            app:fab_title="@string/text"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</android.support.design.widget.CoordinatorLayout>
