<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="350dp"
    android:orientation="vertical"
    tools:context=".main.StartupSyncerFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:text="@string/sentence_sync_using_remote_content"
        android:textColor="@color/primaryColor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/fragment_startup_syncer_sync_drive"
        style="@style/NavMenuItem.Openable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            style="@style/NavMenuImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sync_white_24dp"
            android:tint="@color/colorNamedGray2" />

        <TextView
            style="@style/NavMenuText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sync_google_drive" />
    </LinearLayout>

    <Space
        android:layout_width="1dp"
        android:layout_height="8dp" />

    <LinearLayout
        android:id="@+id/fragment_startup_syncer_sync_dropbox"
        style="@style/NavMenuItem.Openable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            style="@style/NavMenuImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sync_white_24dp"
            android:tint="@color/colorNamedGray2" />

        <TextView
            style="@style/NavMenuText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sync_dropbox" />
    </LinearLayout>

    <Space
        android:layout_width="1dp"
        android:layout_height="8dp" />

    <LinearLayout
        android:id="@+id/fragment_startup_syncer_sync_skip"
        style="@style/NavMenuItem.Openable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            style="@style/NavMenuImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_white"
            android:tint="@color/colorNamedGray2" />

        <TextView
            style="@style/NavMenuText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sync_skip" />
    </LinearLayout>

    <Space
        android:layout_width="1dp"
        android:layout_height="16dp" />
</LinearLayout>